begin van hamburgeropdracht

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*
 :root {
     --menu-bar-width: 60px;
     --menu-bar-height: 10px;
@@ -29,4 +30,4 @@
 #menu::after {
     left: 0;
     top: 20px;
-}
+}*/
