--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*
 :root {
     --menu-bar-width: 60px;
     --menu-bar-height: 10px;
@@ -11,7 +10,6 @@
     height: var(--menu-bar-height);
     margin: 100px;
 }
-
 #menu::before,
 #menu::after {
     background-color: #D84282;
@@ -20,14 +18,18 @@
     width: var(--menu-bar-width);
     height: var(--menu-bar-height);
     position: absolute;
+    transform: rotate(90deg);
+    transition-duration: 4s;
+    transition-delay: 2s;
 }
 
 #menu::before {
     left: 0;
     top: -20px;
+    transform: rotate(-90deg);
 }
 
 #menu::after {
     left: 0;
     top: 20px;
-}*/
+}
